[package]
name = "webui"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8.2", features = ["csr", "nightly"] }
stylers = { version = "0.3.2" }
web-sys = { version = "0.3.77", features = ["Window", "Storage"], default-features = false }
futures-util = { version = "0.3", features = [], default-features = false }

cstreak = { path = "../cstreak/" }
codee = { version = "0.3.0", features = ["json_serde"] }

serde = { version = "1.0", default-features = false }
serde_json = "1.0"


[build-dependencies]
stylers = { version = "1.0.0-alpha" }
